[WPE] Rendering on a HiDPI display looks scaled up instead of rendered at 2x https://bugs.webkit.org/show_bug.cgi?id=185764

Patch by Ryan Walklin <ryan@testtoast.com> on 2019-05-16
Reviewed by Carlos Garcia Campos.

Add a function to the wpe_view_backend_client struct which accepts a device scale factor
configured through wpe_view_backend_dispatch_set_device_scale_factor() and calls
setIntrinsicDeviceScaleFactor for the the current View.Page object. The
function definition has been added in libwpe 1.3.

* UIProcess/API/wpe/WPEView.cpp:
(WKWPE::m_backend): Add set_device_scale_factor implementation declared by libwpe.

Canonical link: https://commits.webkit.org/212069@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@245394 268f45cc-cd09-0410-ab3c-d52691b4dbfc